Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignIntegerBoolObj.quorum
class Main
    action Main
        integer v = Test()
    end

    action Test() returns integer
        Boolean var
        var:SetValue(true)
        return var
    end
end